--- a/Client/Login/login.html
+++ b/Client/Login/login.html
@@ -10,19 +10,20 @@
 </head>
 <body>
 	<div id="loginModal" class="modal">
-		<form class="modal-content animate" method="post">
+		<div class="modal-content animate">
 			<div class="closecontainer">
 				<span onclick="hideModal();" class="close" title="Close Modal">&times;</span>
 			</div>
 
 			<div class="container">
+				<div id="warning" style="display:none"><span class="glyphicon glyphicon-info-sign"></span> <label></label></div>
 				<label for="uname"><b>Username</b></label>
 				<input type="text" placeholder="Enter Username" name="username" required>
 				<label for="psw"><b>Password</b></label>
 				<input type="password" placeholder="Enter Password" name="password" required>
 				<button type="submit" onclick="login();">Login</button>
 			</div>
-		</form>
+		</div>
 	</div>
 </body>
 </html>
