--- a/Client/NavigationBar/navigationBar.html
+++ b/Client/NavigationBar/navigationBar.html
@@ -3,6 +3,8 @@
 <head>
 	<!--JQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!--Bootstrap-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./../NavigationBar/navigationBar.css">
 	<script src="./../NavigationBar/navigationBar.js"></script>
 	
@@ -10,7 +12,7 @@
 <body>
 	<div class="topnav">
 	<ul>
-		<li class="active"><a href="#home">Home</a></li>
+		<li class="active"><a href="http://localhost:8080/search">Home</a></li>
 	</ul>
 	</div>
 </body>
