Update Search Page
- Use criterias instead of natural language search for now
- Implement file uploading for profile page
- Fix login align issue in profile page

--- a/Client/Profile/Profile.html
+++ b/Client/Profile/Profile.html
@@ -11,15 +11,10 @@
     <div id="nav-placeholder"></div>
 </head>
 <body>
-    <div class="profile">
-        <div class='icon'>
-            <img src="img.jpg" alt="Avatar">
-            <div class="control">
-                <input type="file" id="filechooser" accept=".jpg, .jpeg, .png">
-                <button type="button" class="btn btn-success upload">Upload</button>
-            </div>
+    <div class='profileContainer'>
+        <div class="profile">
+            <div class="infoList"></div>
         </div>
-		<div class="infoList"></div>
-    </div>
+    </div>>
 </body>
 </html>
