--- a/Client/Search/RentalHomeOld.html
+++ b/Client/Search/RentalHomeOld.html
@@ -30,32 +30,15 @@
 		<!--Search Bar-->
 		<br>
 		<div class="searchBar">
-			<div class="form-row">
-				<div class="form-group col-md-6">
-					<label for="price">Price</label>
-					<input type="text" class="form-control" id="price_input" placeholder="1000..">
-				</div>
-				<div class="form-group col-md-6">
-					<label for="city">City</label>
-					<input type="text" class="form-control" id="city_input" placeholder="Richmond..">
-				</div>
-				<div class="form-group col-md-6">
-					<label for="size">Size</label>
-					<input type="text" class="form-control" id="size_input" placeholder="200ft..">
-				</div>
-				<div class="form-group col-md-6">
-					<label>Click to search</label>
-					<button id="searchButton" class="searchBar-button form-control" type="submit">
-						<span class="glyphicon glyphicon-search"></span>
-					</button>
-				</div>
-			</div>
-
+			<input class="searchBar-text" type="text" placeholder="Search.."
+			><button id="searchButton" class="searchBar-button" type="submit">
+				<span class="glyphicon glyphicon-search"></span>
+			</button>
 		</div>
 		<!--intuitive text-->
 		<div>
 			<label class="form-text text-muted">Enter any criteras you like to include in search</label><br>
-			<label class="form-text text-muted">Example: 3000$ Richmond 200ft</label>
+			<label class="form-text text-muted">Example: Richmond 3000$</label>
 		</div>
 		<!--residence elements-->
 		<div class="residence-list">
