Combine code form teammates : )
- Register page (Jon Zhang)
- View Post page & Comment (Wen Jin)
- Create Post page (Doreen Xu)
- Search Page, Profile, Login, Navigation bar (Eden Lu)
- Change SQL table script

--- a/Client/Search/RentalHome.html
+++ b/Client/Search/RentalHome.html
@@ -40,8 +40,8 @@
 					<input type="text" class="form-control" id="city_input" placeholder="Richmond..">
 				</div>
 				<div class="form-group col-md-6">
-					<label for="size">Size</label>
-					<input type="text" class="form-control" id="size_input" placeholder="200ft..">
+					<label for="size">Room Number</label>
+					<input type="text" class="form-control" id="room_num_input" placeholder="2..">
 				</div>
 				<div class="form-group col-md-6">
 					<label>Click to search</label>
@@ -59,32 +59,7 @@
 		</div>
 		<!--residence elements-->
 		<div class="residence-list">
-			<ul>
-				<li class="residence-unit">
-					<a href="https://google.com" class="residence-unit-link">
-					<div class="residence-unit-title">
-						<label>Yo man</label>
-					</div>
-					<div class="residence-unit-thumbnail">
-						<img class="residence-unit-thumbnail-image" src="question-mark.jpg">
-					</div>
-					<div class="residence-unit-detail">
-					</div>
-					</a>
-				</li>
-				<li class="residence-unit">
-					<a href="https://google.com" class="residence-unit-link">
-					<div class="residence-unit-title">
-						<label>Richmond 2 bed rent</label>
-					</div>
-					<div class="residence-unit-thumbnail">
-						<img class="residence-unit-thumbnail-image" src="question-mark.jpg">
-					</div>
-					<div class="residence-unit-detail">
-					</div>
-					</a>
-				</li>
-			</ul>
+			<ul></ul>
 		</div>
 	</div>
 </body>
