Add friend & give administer power to freeze account
- Add friend feature through using friend code
- Allow administer to freeze account using aid

--- a/Client/Administer/Administer.html
+++ b/Client/Administer/Administer.html
@@ -31,6 +31,11 @@
                     <thead><tr><th>No result</th></tr></thead>
                 </table>
             </div>
+            <div class="contentBlock">
+                <label>Account Freeze Control</label>
+                <input type="text" class="form-control" id="freezeAccount" placeholder="Enter the account you want to freeze">
+                <button type="button" class="btn btn-success freeze" onclick="freezeAccount();"> Freeze</button>
+            </div>
 		</div>
     </div>
 </body>
