--- a/Client/Profile/Profile.html
+++ b/Client/Profile/Profile.html
@@ -4,7 +4,8 @@
 	<!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Bootstrap-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./../Profile/Profile.css">
     <script src="./../Profile/Profile.js"></script>
     <!--Navigation bar-->
@@ -15,6 +16,6 @@
         <div class="profile">
             <div class="infoList"></div>
         </div>
-    </div>>
+    </div>
 </body>
 </html>
